src/evaluator/return_statement/tests/snapshots/rust_monkey_interpreter__evaluator__return_statement__tests__test_evaluator_return_nodes_case4.snap
---
source: src/evaluator/return_statement/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string())))"
---
{
  "INTEGER": {
    "value": 4
  }
}
